--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -127,13 +127,10 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/MainMenuLevel
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Health.Health
-OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Inventory.Inventory
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1233,6 +1230,26 @@ Health_C.Behavior=True
 Health_C.Render Transform=True
 Health_C.Clipping=True
 Health_C.Navigation=True
+Widget.Layout=True
+CameraCharacter_C.Tags=True
+CameraCharacter_C.Activation=True
+CameraCharacter_C.Cooking=True
+CameraCharacter_C.ComponentTick=True
+CameraCharacter_C.ComponentReplication=True
+CameraCharacter_C.Variable=True
+NameProperty.Variable=True
+NameProperty.DefaultValueCategory=True
+MainMenu_C.Default=True
+MainMenu_C.Appearance=True
+MainMenu_C.Designer=True
+MainMenu_C.Input=True
+MainMenu_C.Interaction=True
+MainMenu_C.Performance=True
+MainMenu_C.Layout=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1253,7 +1270,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/User/Documents/GitHub/KV6002-Team-Project/KV6002/Content/FirstPersonBP/Maps
+UNR=C:/Users/User/Documents/GitHub/KV6002-Team-Project/KV6002/Content
 BRUSH=../../../Projects/KV6002/Content/
 FBX=../../../Projects/KV6002/Content/
 FBXAnim=../../../Projects/KV6002/Content/
@@ -1916,29 +1933,29 @@ User Created=False
 Common=False
 
 [MessageLog]
-LastLogListing=AssetReimport
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Blueprints/Health
-MRUItem3=/Game/FirstPersonBP/Blueprints/Radial
-MRUItem4=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem5=/Game/FirstPersonBP/Blueprints/PauseMenu
-MRUItem6=/Game/Geometry/EnableInventory
-MRUItem7=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem8=/Game/MainMenuLevel
-MRUItem9=/Game/Geometry/Pickups/GunModule
-MRUItem10=/Game/MainMenu
-MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem12=/Game/FirstPersonBP/Blueprints/InventorySlot
-MRUItem13=/Game/FirstPersonBP/Blueprints/Prompt
-MRUItem14=/Game/FirstPersonBP/Blueprints/radialHUD
-MRUItem15=/Game/EnableInventory
-MRUItem16=/Game/PauseMenu
-MRUItem17=/Game/InventoryToggle
-MRUItem18=/Game/StarterContent/Maps/StarterMap
-MRUItem19=/Game/Photography
+MRUItem0=/Game/FirstPersonBP/Blueprints/PauseMenu
+MRUItem1=/Game/FirstPersonBP/Blueprints/Radial
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem3=/Game/CameraCharacter
+MRUItem4=/Game/MainMenu
+MRUItem5=/Game/MainMenuLevel
+MRUItem6=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem7=/Game/FirstPersonBP/Blueprints/Health
+MRUItem8=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem9=/Game/Geometry/EnableInventory
+MRUItem10=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem11=/Game/Geometry/Pickups/GunModule
+MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem13=/Game/FirstPersonBP/Blueprints/InventorySlot
+MRUItem14=/Game/FirstPersonBP/Blueprints/Prompt
+MRUItem15=/Game/FirstPersonBP/Blueprints/radialHUD
+MRUItem16=/Game/EnableInventory
+MRUItem17=/Game/PauseMenu
+MRUItem18=/Game/InventoryToggle
+MRUItem19=/Game/StarterContent/Maps/StarterMap
 
 [MaterialEditor]
 PrimType=1
@@ -2014,6 +2031,9 @@ bMaterialQualityUsed[2]=0
 /Game/EnableInventory.EnableInventory=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 /Game/FirstPersonBP/Blueprints/PauseMenu.PauseMenu=1
+/Game/FirstPersonBP/Blueprints/Radial.Radial=1
+/Game/CameraCharacter.CameraCharacter=1
+/Game/MainMenu.MainMenu=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2078,22 +2098,22 @@ ParticleModuleBeamNoise="\"Object.LowFreq.NoiseRange\" \"Object.LowFreq.NoiseRan
 ParticleModuleBeamBase="\"Object.LowFreq.NoiseRange\" \"Object.LowFreq.NoiseRange.Distribution\" \"Object.LowFreq.NoiseRangeScale.Distribution\" \"Object.LowFreq.NoiseSpeed\" \"Object.LowFreq.NoiseSpeed.Distribution\" \"Object.LowFreq.NoiseTangentStrength.Distribution\" \"Object.LowFreq.NoiseScale.Distribution\" "
 ParticleModuleBeamSource="\"Object.Source.Source\" \"Object.Source.Source.Distribution\" \"Object.Source.SourceTangent.Distribution\" \"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
-HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 InventorySlot_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Inventory_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 UniformGridPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout"
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout"
+TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Margin\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout"
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 radialHUD_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Prompt_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -2107,7 +2127,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Layout.Slot.Object.Layout.Layout"
 CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-ActorComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+ActorComponent=
 Spacer="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Radial_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2146,8 +2166,8 @@ Health_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/MainMenuLevel
+MRUItem0=/Game/MainMenuLevel
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem2=/Game/MainMenu
 MRUItem3=/Game/StarterContent/Maps/StarterMap
 MRUItem4=/Game/Photography
@@ -2259,11 +2279,11 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/Geometry/Pickups/GunModule.GunModule;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/InventoryToggle.InventoryToggle;
 RecentlyPlaced=/Script/VREditor.FloatingText;
 RecentlyPlaced=/Game/Geometry/BasicBarrier.BasicBarrier;
