Game Over, Fixed Health

--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,7 +137,7 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -469,6 +469,26 @@ Health_C.Behavior=True
 Health_C.Render Transform=True
 Health_C.Clipping=True
 Health_C.Navigation=True
+GameOver_C.Default=True
+GameOver_C.Appearance=True
+GameOver_C.Designer=True
+GameOver_C.Input=True
+GameOver_C.Interaction=True
+GameOver_C.Performance=True
+GameOver_C.Layout=True
+GameOver_C.Behavior=True
+GameOver_C.Render Transform=True
+GameOver_C.Clipping=True
+GameOver_C.Navigation=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -485,16 +505,18 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/Health
+MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/FirstPersonBP/Blueprints/Save
-MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem4=/Game/FirstPersonBP/Blueprints/Options
-MRUItem5=/Game/FirstPersonBP/Blueprints/PauseMenu
-MRUItem6=/Game/Geometry/Pickups/GunModule
-MRUItem7=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem8=/Game/MainMenu
-MRUItem9=/Game/MainMenuOLD
+MRUItem2=/Game/GameOver
+MRUItem3=/Game/FirstPersonBP/Blueprints/Health
+MRUItem4=/Game/FirstPersonBP/Blueprints/Save
+MRUItem5=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem6=/Game/FirstPersonBP/Blueprints/Options
+MRUItem7=/Game/FirstPersonBP/Blueprints/PauseMenu
+MRUItem8=/Game/Geometry/Pickups/GunModule
+MRUItem9=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem10=/Game/MainMenu
+MRUItem11=/Game/MainMenuOLD
 
 [AssetEditorToolkitTabLocation]
 /Game/MainMenu.MainMenu=1
@@ -509,6 +531,8 @@ MRUItem9=/Game/MainMenuOLD
 /Game/FirstPersonBP/Blueprints/Save.Save=1
 /Game/FirstPersonBP/Blueprints/PauseMenu.PauseMenu=1
 /Game/FirstPersonBP/Blueprints/Health.Health=1
+/Game/GameOver.GameOver=1
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
