Quick inventory loading fix

--- a/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/KV6002/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -160,7 +160,8 @@ LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 LastLogListing=LoadErrors
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [DetailCategories]
 EditorStyleSettings.UserInterface=True
@@ -479,6 +480,52 @@ Options_C.Behavior=True
 Options_C.Render Transform=True
 Options_C.Clipping=True
 Options_C.Navigation=True
+GunModule_C.TransformCommon=True
+GunModule_C.Default=True
+GunModule_C.Rendering=True
+GunModule_C.Input=True
+GunModule_C.Actor=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+EndTrigger_Blueprint_C.TransformCommon=True
+EndTrigger_Blueprint_C.Default=True
+EndTrigger_Blueprint_C.Shape=True
+EndTrigger_Blueprint_C.Navigation=True
+EndTrigger_Blueprint_C.Physics=True
+EndTrigger_Blueprint_C.Collision=True
+EndTrigger_Blueprint_C.Rendering=True
+EndTrigger_Blueprint_C.Tags=True
+EndTrigger_Blueprint_C.Cooking=True
+EndTrigger_Blueprint_C.Input=True
+EndTrigger_Blueprint_C.Actor=True
+Actor.TransformCommon=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
+EnableInventory_C.TransformCommon=True
+EnableInventory_C.Shape=True
+EnableInventory_C.Navigation=True
+EnableInventory_C.Physics=True
+EnableInventory_C.Collision=True
+EnableInventory_C.Rendering=True
+EnableInventory_C.Tags=True
+EnableInventory_C.Cooking=True
+EnableInventory_C.Input=True
+EnableInventory_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -497,6 +544,9 @@ PanelWidget=
 Widget=
 Visual=
 Button=
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1159,14 +1209,14 @@ UATHelper.TimeStamp=2018.07.28-08.46.11
 UATHelper.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/Options
-MRUItem1=/Game/FirstPersonBP/Blueprints/PauseMenu
-MRUItem2=/Game/GameOver
-MRUItem3=/Game/FirstPersonBP/Blueprints/WinScreen
-MRUItem4=/Game/FirstPersonBP/Blueprints/InventorySlot
-MRUItem5=/Game/FirstPersonBP/Blueprints/Inventory
-MRUItem6=/Game/FirstPersonBP/Blueprints/Save
-MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem1=/Game/FirstPersonBP/Blueprints/Options
+MRUItem2=/Game/FirstPersonBP/Blueprints/PauseMenu
+MRUItem3=/Game/GameOver
+MRUItem4=/Game/FirstPersonBP/Blueprints/WinScreen
+MRUItem5=/Game/FirstPersonBP/Blueprints/InventorySlot
+MRUItem6=/Game/FirstPersonBP/Blueprints/Inventory
+MRUItem7=/Game/FirstPersonBP/Blueprints/Save
 
 [WidgetTemplatesExpanded]
 Extra=False
